--- a/style.css
+++ b/style.css
@@ -1,1 +1,43 @@
 /*Styles*/
+body {
+    font-family: 'Open Sans', sans-serif;;
+    font-size: 16px;
+    max-width: 100%;
+    height: 100%;
+    margin: 0;
+    scroll-behavior: smooth;
+    user-select: none;
+}
+
+
+.forest {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    background: #122234; /*основной фон*/
+    overflow: hidden;
+}
+
+
+.forest-layer {
+    position: absolute;
+    width: 200vw;
+    height: 100vh;
+    top: 0;
+    left: -10vw;
+    background-size: 100vw auto;
+    background-repeat: repeat-x;
+}
+
+.forest-1 {
+    background-image: url('/images/forest-1.png');
+}
+
+.forest-2 {
+    background-image: url('/images/forest-2.png');
+}
+
+.forest-3 {
+    background-image: url('/images/forest-3.png');
+}
+
