fix: change link images

--- a/style.css
+++ b/style.css
@@ -30,14 +30,14 @@ body {
 }
 
 .forest-1 {
-    background-image: url('/images/forest-1.png');
+    background-image: url('images/forest-1.png');
 }
 
 .forest-2 {
-    background-image: url('/images/forest-2.png');
+    background-image: url('images/forest-2.png');
 }
 
 .forest-3 {
-    background-image: url('/images/forest-3.png');
+    background-image: url('images/forest-3.png');
 }
 
